--- a/defconfig/sun8i_defconfig
+++ b/defconfig/sun8i_defconfig
@@ -734,10 +734,10 @@ CONFIG_STAGING_BOARD=y
 CONFIG_COMMON_CLK_AXI_CLKGEN=m
 # CONFIG_CLK_SUNXI_CLOCKS is not set
 # CONFIG_CLK_SUNXI_PRCM_SUN9I is not set
-CONFIG_SUN4I_A10_CCU=m
-CONFIG_SUN6I_A31_CCU=m
-CONFIG_SUN8I_A23_CCU=m
-CONFIG_SUN8I_A33_CCU=m
+CONFIG_SUN4I_A10_CCU=y
+CONFIG_SUN6I_A31_CCU=y
+CONFIG_SUN8I_A23_CCU=y
+CONFIG_SUN8I_A33_CCU=y
 # CONFIG_SUN8I_V3S_CCU is not set
 # CONFIG_SUN8I_R40_CCU is not set
 CONFIG_HWSPINLOCK=y
