--- a/defconfig/sun50i_defconfig
+++ b/defconfig/sun50i_defconfig
@@ -103,6 +103,8 @@ CONFIG_ZSWAP=y
 CONFIG_Z3FOLD=y
 CONFIG_ZPOOL=y
 CONFIG_ZBUD=y
+CONFIG_ZSWAP_DEFAULT_ON=y
+CONFIG_ZSMALLOC=y
 CONFIG_CMA=y
 CONFIG_NET=y
 CONFIG_PACKET=y
