--- a/defconfig/sun8i_defconfig
+++ b/defconfig/sun8i_defconfig
@@ -95,6 +95,7 @@ CONFIG_ZSWAP=y
 CONFIG_Z3FOLD=y
 CONFIG_ZPOOL=y
 CONFIG_ZBUD=y
+CONFIG_ZSWAP_DEFAULT_ON=y
 CONFIG_CMA=y
 CONFIG_CMA_DEBUGFS=y
 CONFIG_NET=y
