--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -175,9 +175,11 @@ CONFIG_BT_HCIBTUSB=m
 CONFIG_BT_HCIBTSDIO=m
 CONFIG_BT_HCIUART=m
 CONFIG_BT_HCIUART_BCSP=y
+CONFIG_BT_HCIUART_LL=y
 CONFIG_BT_HCIUART_BCM=y
 CONFIG_BT_HCIUART_RTL=y
 CONFIG_BT_HCIUART_QCA=y
+CONFIG_BT_HCIBCM203X=m
 CONFIG_BT_MTKSDIO=m
 CONFIG_BT_MTKUART=m
 CONFIG_CFG80211=m
@@ -188,9 +190,42 @@ CONFIG_RFKILL_INPUT=y
 CONFIG_RFKILL_GPIO=m
 CONFIG_CEPH_LIB=m
 CONFIG_CEPH_LIB_USE_DNS_RESOLVER=y
+CONFIG_NFC=m
+CONFIG_NFC_DIGITAL=m
+CONFIG_NFC_NCI=m
+CONFIG_NFC_NCI_SPI=m
+CONFIG_NFC_NCI_UART=m
+CONFIG_NFC_HCI=m
+CONFIG_NFC_SHDLC=y
+CONFIG_NFC_TRF7970A=m
+CONFIG_NFC_SIM=m
+CONFIG_NFC_PORT100=m
+CONFIG_NFC_VIRTUAL_NCI=m
+CONFIG_NFC_FDP=m
+CONFIG_NFC_FDP_I2C=m
+CONFIG_NFC_PN544_I2C=m
+CONFIG_NFC_PN533_USB=m
+CONFIG_NFC_PN533_I2C=m
+CONFIG_NFC_PN532_UART=m
+CONFIG_NFC_MICROREAD_I2C=m
+CONFIG_NFC_MRVL_USB=m
+CONFIG_NFC_MRVL_UART=m
+CONFIG_NFC_MRVL_I2C=m
+CONFIG_NFC_MRVL_SPI=m
+CONFIG_NFC_ST21NFCA_I2C=m
+CONFIG_NFC_ST_NCI_I2C=m
+CONFIG_NFC_ST_NCI_SPI=m
+CONFIG_NFC_NXP_NCI=m
+CONFIG_NFC_NXP_NCI_I2C=m
+CONFIG_NFC_S3FWRN5_I2C=m
+CONFIG_NFC_S3FWRN82_UART=m
+CONFIG_NFC_ST95HF=m
+CONFIG_LWTUNNEL=y
 CONFIG_FAILOVER=m
 CONFIG_PCI=y
+CONFIG_PCIEPORTBUS=y
 CONFIG_PCI_HOST_GENERIC=m
+CONFIG_PCIE_DW_PLAT_HOST=y
 CONFIG_PCI_MESON=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
@@ -215,11 +250,23 @@ CONFIG_BLK_DEV_NBD=m
 CONFIG_BLK_DEV_RAM=y
 CONFIG_NVME_TARGET=m
 CONFIG_DUMMY_IRQ=m
+CONFIG_ENCLOSURE_SERVICES=m
 CONFIG_SRAM=y
+CONFIG_MISC_RTSX_PCI=m
+CONFIG_MISC_RTSX_USB=m
 # CONFIG_SCSI_PROC_FS is not set
 CONFIG_BLK_DEV_SD=y
+CONFIG_CHR_DEV_ST=m
 CONFIG_BLK_DEV_SR=y
+CONFIG_CHR_DEV_SG=m
+CONFIG_CHR_DEV_SCH=m
+CONFIG_SCSI_ENCLOSURE=m
+CONFIG_SCSI_CONSTANTS=y
+CONFIG_SCSI_LOGGING=y
+CONFIG_SCSI_SCAN_ASYNC=y
 CONFIG_SCSI_SAS_LIBSAS=y
+CONFIG_ISCSI_TCP=m
+CONFIG_ISCSI_BOOT_SYSFS=m
 CONFIG_ATA=y
 CONFIG_SATA_AHCI=m
 CONFIG_SATA_AHCI_PLATFORM=m
@@ -297,6 +344,7 @@ CONFIG_R8169=m
 # CONFIG_NET_VENDOR_SOCIONEXT is not set
 CONFIG_STMMAC_ETH=y
 CONFIG_DWMAC_DWC_QOS_ETH=m
+CONFIG_STMMAC_PCI=m
 # CONFIG_NET_VENDOR_SUN is not set
 # CONFIG_NET_VENDOR_SYNOPSYS is not set
 # CONFIG_NET_VENDOR_TEHUTI is not set
@@ -405,6 +453,7 @@ CONFIG_JOYSTICK_PSXPAD_SPI_FF=y
 CONFIG_INPUT_MISC=y
 CONFIG_INPUT_UINPUT=y
 CONFIG_INPUT_GPIO_ROTARY_ENCODER=m
+CONFIG_USERIO=m
 # CONFIG_LEGACY_PTYS is not set
 CONFIG_SERIAL_8250=y
 # CONFIG_SERIAL_8250_DEPRECATED_OPTIONS is not set
@@ -422,8 +471,6 @@ CONFIG_SERIAL_DEV_BUS=y
 CONFIG_HW_RANDOM=y
 CONFIG_HW_RANDOM_OPTEE=m
 # CONFIG_HW_RANDOM_CN10K is not set
-# CONFIG_RANDOM_TRUST_CPU is not set
-# CONFIG_RANDOM_TRUST_BOOTLOADER is not set
 CONFIG_I2C_CHARDEV=y
 CONFIG_I2C_MUX=y
 CONFIG_I2C_ARB_GPIO_CHALLENGE=m
@@ -433,11 +480,12 @@ CONFIG_I2C_MUX_PCA954x=y
 CONFIG_I2C_MUX_PINCTRL=y
 CONFIG_I2C_MUX_REG=m
 CONFIG_I2C_DEMUX_PINCTRL=m
+CONFIG_I2C_DESIGNWARE_SLAVE=y
 CONFIG_I2C_DESIGNWARE_PLATFORM=y
+CONFIG_I2C_DESIGNWARE_PCI=m
 CONFIG_I2C_GPIO=y
 CONFIG_I2C_MESON=y
 CONFIG_I2C_TINY_USB=m
-CONFIG_I2C_SLAVE=y
 CONFIG_SPI=y
 CONFIG_SPI_GPIO=y
 CONFIG_SPI_MESON_SPICC=y
@@ -453,8 +501,12 @@ CONFIG_GPIO_DWAPB=y
 CONFIG_GPIO_GENERIC_PLATFORM=y
 CONFIG_GPIO_SYSCON=y
 CONFIG_GPIO_PCA953X=m
+CONFIG_GPIO_PCA953X_IRQ=y
+CONFIG_GPIO_BT8XX=m
+CONFIG_GPIO_PCI_IDIO_16=m
+CONFIG_GPIO_PCIE_IDIO_24=m
+CONFIG_GPIO_RDC321X=m
 CONFIG_GPIO_PISOSR=m
-CONFIG_POWER_RESET_ODROID=y
 CONFIG_POWER_RESET_GPIO=y
 CONFIG_POWER_RESET_GPIO_RESTART=y
 CONFIG_POWER_RESET_REGULATOR=y
@@ -482,6 +534,7 @@ CONFIG_THERMAL_MMIO=m
 CONFIG_GENERIC_ADC_THERMAL=m
 CONFIG_KHADAS_MCU_FAN_THERMAL=m
 CONFIG_WATCHDOG=y
+CONFIG_SOFT_WATCHDOG=m
 CONFIG_GPIO_WATCHDOG=m
 CONFIG_DW_WATCHDOG=m
 CONFIG_MESON_GXBB_WATCHDOG=y
@@ -545,6 +598,8 @@ CONFIG_MEDIA_SUPPORT=y
 CONFIG_MEDIA_CONTROLLER_DVB=y
 CONFIG_DVB_MAX_ADAPTERS=8
 # CONFIG_DVB_DYNAMIC_MINORS is not set
+CONFIG_MEDIA_USB_SUPPORT=y
+CONFIG_MEDIA_PCI_SUPPORT=y
 # CONFIG_RADIO_ADAPTERS is not set
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_DVB_PLATFORM_DRIVERS=y
@@ -587,14 +642,12 @@ CONFIG_VIDEO_WM8775=m
 # CONFIG_MEDIA_TUNER_QT1010 is not set
 # CONFIG_MEDIA_TUNER_R820T is not set
 # CONFIG_MEDIA_TUNER_SI2157 is not set
-# CONFIG_MEDIA_TUNER_SIMPLE is not set
 # CONFIG_MEDIA_TUNER_TDA18212 is not set
 # CONFIG_MEDIA_TUNER_TDA18218 is not set
 # CONFIG_MEDIA_TUNER_TDA18250 is not set
 # CONFIG_MEDIA_TUNER_TDA18271 is not set
 # CONFIG_MEDIA_TUNER_TDA827X is not set
 # CONFIG_MEDIA_TUNER_TDA8290 is not set
-# CONFIG_MEDIA_TUNER_TDA9887 is not set
 # CONFIG_MEDIA_TUNER_TEA5761 is not set
 # CONFIG_MEDIA_TUNER_TEA5767 is not set
 # CONFIG_MEDIA_TUNER_TUA9001 is not set
@@ -725,7 +778,6 @@ CONFIG_DRM_DW_HDMI_GP_AUDIO=y
 CONFIG_DRM_DW_HDMI_CEC=y
 CONFIG_DRM_MESON=y
 CONFIG_DRM_SIMPLEDRM=m
-# CONFIG_DRM_LIMA= is not set
 CONFIG_DRM_PANFROST=m
 CONFIG_FB=y
 CONFIG_FIRMWARE_EDID=y
@@ -793,6 +845,7 @@ CONFIG_HID_AUREAL=y
 CONFIG_HID_BIGBEN_FF=m
 CONFIG_HID_CHERRY=y
 CONFIG_HID_CHICONY=y
+CONFIG_HID_CMEDIA=m
 CONFIG_HID_CYPRESS=y
 CONFIG_HID_DRAGONRISE=m
 CONFIG_DRAGONRISE_FF=y
@@ -846,6 +899,7 @@ CONFIG_USB_ACM=m
 CONFIG_USB_PRINTER=m
 CONFIG_USB_WDM=m
 CONFIG_USB_STORAGE=y
+CONFIG_USB_STORAGE_REALTEK=m
 CONFIG_USB_UAS=y
 CONFIG_USB_DWC3=y
 CONFIG_USB_DWC2=y
@@ -863,8 +917,17 @@ CONFIG_TYPEC_TCPM=m
 CONFIG_TYPEC_FUSB302=m
 CONFIG_MMC=y
 CONFIG_MMC_BLOCK_MINORS=32
+CONFIG_MMC_SDHCI=m
+CONFIG_MMC_SDHCI_PCI=m
+CONFIG_MMC_SDHCI_PLTFM=m
+CONFIG_MMC_SDHCI_OF_DWCMSHC=m
 CONFIG_MMC_MESON_GX=y
 CONFIG_MMC_SPI=y
+CONFIG_MMC_DW=m
+CONFIG_MMC_DW_PCI=m
+CONFIG_MMC_USHC=m
+CONFIG_MMC_REALTEK_PCI=m
+CONFIG_MMC_REALTEK_USB=m
 CONFIG_LEDS_GPIO=y
 CONFIG_LEDS_PWM=y
 CONFIG_LEDS_SYSCON=y
@@ -897,8 +960,11 @@ CONFIG_VIRT_DRIVERS=y
 CONFIG_STAGING=y
 CONFIG_RTL8192U=m
 CONFIG_RTLLIB=m
+CONFIG_RTL8192E=m
 CONFIG_RTL8723BS=m
+CONFIG_R8712U=m
 CONFIG_R8188EU=m
+CONFIG_RTS5208=m
 CONFIG_STAGING_MEDIA=y
 CONFIG_VIDEO_MESON_VDEC=m
 CONFIG_STAGING_BOARD=y
@@ -907,7 +973,6 @@ CONFIG_COMMON_CLK_SCPI=y
 CONFIG_COMMON_CLK_AXI_CLKGEN=m
 CONFIG_COMMON_CLK_PWM=y
 CONFIG_COMMON_CLK_FIXED_MMIO=y
-# CONFIG_HISILICON_ERRATUM_161010101 is not set
 CONFIG_MAILBOX=y
 CONFIG_ARM_MHU=y
 CONFIG_PLATFORM_MHU=y
@@ -921,14 +986,22 @@ CONFIG_EXTCON_GPIO=m
 CONFIG_EXTCON_USB_GPIO=y
 CONFIG_IIO=y
 CONFIG_IIO_BUFFER=y
+CONFIG_IIO_BUFFER_CB=m
+CONFIG_IIO_BUFFER_DMAENGINE=m
+CONFIG_IIO_BUFFER_HW_CONSUMER=m
 CONFIG_IIO_TRIGGERED_BUFFER=m
 CONFIG_IIO_SW_DEVICE=m
 CONFIG_IIO_SW_TRIGGER=m
 CONFIG_IIO_TRIGGERED_EVENT=m
+CONFIG_IIO_RESCALE=m
+CONFIG_IIO_MUX=m
+CONFIG_IIO_INTERRUPT_TRIGGER=m
+CONFIG_IIO_SYSFS_TRIGGER=m
 CONFIG_PWM=y
 CONFIG_PWM_DWC=y
 CONFIG_PWM_MESON=y
 CONFIG_RESET_TI_SYSCON=m
+CONFIG_PHY_CAN_TRANSCEIVER=m
 CONFIG_ARM_CCI_PMU=m
 CONFIG_MESON_EFUSE=y
 CONFIG_MESON_MX_EFUSE=y
