--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -57,8 +57,8 @@ exec 3>&1
 
 # Store data to $VALUES variable
 VALUES=$(dialog --ok-label "Submit" --no-cancel \
-	  --backtitle "Debian Image Builder" \
-	  --title "Config Menu" \
+	  --backtitle "DEBIAN IMAGE BUILDER: CONFIG MENU" \
+	  --title "" \
 	  --form "" \
 0 40 0 \
 	" Name:"		1 1	"$NAME"			1 8 26 0 \
