--- a/defconfig/meson64_defconfig
+++ b/defconfig/meson64_defconfig
@@ -1031,7 +1031,9 @@ CONFIG_FANOTIFY=y
 CONFIG_AUTOFS4_FS=y
 CONFIG_FUSE_FS=m
 CONFIG_OVERLAY_FS=y
+CONFIG_NETFS_STATS=y
 CONFIG_FSCACHE=y
+CONFIG_CACHEFILES=y
 CONFIG_ISO9660_FS=y
 CONFIG_JOLIET=y
 CONFIG_ZISOFS=y
