--- a/defconfig/odroid-xu4_defconfig
+++ b/defconfig/odroid-xu4_defconfig
@@ -1366,8 +1366,9 @@ CONFIG_QFMT_V2=m
 CONFIG_AUTOFS4_FS=y
 CONFIG_FUSE_FS=m
 CONFIG_OVERLAY_FS=m
-CONFIG_FSCACHE=m
-CONFIG_CACHEFILES=m
+CONFIG_NETFS_STATS=y
+CONFIG_FSCACHE=y
+CONFIG_CACHEFILES=y
 CONFIG_ISO9660_FS=m
 CONFIG_JOLIET=y
 CONFIG_ZISOFS=y
