--- a/defconfig/sun7i_defconfig
+++ b/defconfig/sun7i_defconfig
@@ -845,7 +845,9 @@ CONFIG_CUSE=y
 CONFIG_OVERLAY_FS=y
 CONFIG_OVERLAY_FS_INDEX=y
 CONFIG_OVERLAY_FS_METACOPY=y
+CONFIG_NETFS_STATS=y
 CONFIG_FSCACHE=y
+CONFIG_CACHEFILES=y
 CONFIG_ISO9660_FS=m
 CONFIG_JOLIET=y
 CONFIG_ZISOFS=y
