--- a/defconfig/rockchip64-rk356x_defconfig
+++ b/defconfig/rockchip64-rk356x_defconfig
@@ -119,6 +119,8 @@ CONFIG_ZSWAP=y
 CONFIG_ZSWAP_DEFAULT_ON=y
 CONFIG_Z3FOLD=y
 CONFIG_SHUFFLE_PAGE_ALLOCATOR=y
+CONFIG_PAGE_REPORTING=y
+CONFIG_KSM=y
 CONFIG_TRANSPARENT_HUGEPAGE=y
 CONFIG_CMA=y
 CONFIG_CMA_AREAS=7
