--- a/defconfig/rockchip64-rk3399_defconfig
+++ b/defconfig/rockchip64-rk3399_defconfig
@@ -781,6 +781,7 @@ CONFIG_USB_SERIAL_SIMPLE=y
 CONFIG_USB_SERIAL_QCAUX=y
 CONFIG_USB_SERIAL_QUALCOMM=y
 CONFIG_USB_SERIAL_OPTION=y
+CONFIG_USB_LCD=m
 CONFIG_NOP_USB_XCEIV=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_GADGET_VBUS_DRAW=500
