defconfig: `sun8i_defconfig`
maintenance

--- a/defconfig/sun8i_defconfig
+++ b/defconfig/sun8i_defconfig
@@ -811,8 +811,8 @@ CONFIG_VIDEO_SUNXI=y
 CONFIG_VIDEO_SUNXI_CEDRUS=y
 CONFIG_STAGING_BOARD=y
 CONFIG_COMMON_CLK_AXI_CLKGEN=m
-CONFIG_SUN8I_V3S_CCU=m
-CONFIG_SUN8I_R40_CCU=m
+CONFIG_SUN8I_V3S_CCU=y
+CONFIG_SUN8I_R40_CCU=y
 CONFIG_HWSPINLOCK=y
 CONFIG_HWSPINLOCK_SUN6I=m
 CONFIG_MAILBOX=y
