make config: `set crosscompile=0 by default if native aarch64`

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -38,7 +38,11 @@ UBOOT_VERSION="v2022.07"
 BUILD_VERSION="1"
 menuconfig="0"
 COMPILER="gcc-10"
-crosscompile="1"
+if [[ `uname -m | grep aarch64` ]]; then
+	crosscompile="0"
+else
+	crosscompile="1"
+fi
 ccache="0"
 rtl88XXau="0"
 rtl88X2bu="0"
