`Debian Image Builder`
filesystems:
default = ext4
optional = btrfs and xfs (preliminary)

basic usage:
echo 'FSTYPE="xfs"' > fstype.txt
sed -i 's/P_VALUE="p1"/P_VALUE="p2"/g' lib/boards/$board

a detailed write up will eventually be found in the wiki.

--- a/files/boot/odroid/odroid-config.ini
+++ b/files/boot/odroid/odroid-config.ini
@@ -1,7 +1,7 @@
 [user_options]
 bootlabel=Amlogic
 uuid=PARTUUID=
-rootfstype=ext4
+rootfstype=
 verbose=1
 usbquirks=usb-storage.quirks=0x1f75:0x0621:u
 extra="mitigations=off iommu.passthrough=1 no_console_suspend clk_ignore_unused"
