--- a/files/boot/odroid/odroid-vendor-config.ini
+++ b/files/boot/odroid/odroid-vendor-config.ini
@@ -1,7 +1,7 @@
 [user_options]
 bootlabel=Odroid
 uuid=PARTUUID=
-rootfstype=ext4
+rootfstype=
 verbose=1
 usbquirks=usb-storage.quirks=0x1f75:0x0621:u
 extra="cma=800M clk_ignore_unused mitigations=off no_console_suspend"
