--- a/defconfig/bcm2709_defconfig
+++ b/defconfig/bcm2709_defconfig
@@ -424,13 +424,6 @@ CONFIG_YAM=m
 CONFIG_CAN=m
 CONFIG_CAN_J1939=m
 CONFIG_CAN_ISOTP=m
-CONFIG_CAN_VCAN=m
-CONFIG_CAN_SLCAN=m
-CONFIG_CAN_MCP251X=m
-CONFIG_CAN_MCP251XFD=m
-CONFIG_CAN_EMS_USB=m
-CONFIG_CAN_GS_USB=m
-CONFIG_CAN_PEAK_USB=m
 CONFIG_BT=m
 CONFIG_BT_RFCOMM=m
 CONFIG_BT_RFCOMM_TTY=y
@@ -487,6 +480,7 @@ CONFIG_BLK_DEV_RAM=y
 CONFIG_CDROM_PKTCDVD=m
 CONFIG_ATA_OVER_ETH=m
 CONFIG_ENCLOSURE_SERVICES=m
+CONFIG_SRAM=y
 CONFIG_EEPROM_AT24=m
 CONFIG_EEPROM_AT25=m
 CONFIG_TI_ST=m
@@ -583,6 +577,13 @@ CONFIG_BCM84881_PHY=m
 CONFIG_BCM87XX_PHY=m
 CONFIG_REALTEK_PHY=m
 CONFIG_SMSC_PHY=y
+CONFIG_CAN_VCAN=m
+CONFIG_CAN_SLCAN=m
+CONFIG_CAN_MCP251X=m
+CONFIG_CAN_MCP251XFD=m
+CONFIG_CAN_EMS_USB=m
+CONFIG_CAN_GS_USB=m
+CONFIG_CAN_PEAK_USB=m
 CONFIG_MDIO_BITBANG=m
 CONFIG_PPP=m
 CONFIG_PPP_BSDCOMP=m
@@ -806,6 +807,7 @@ CONFIG_BCMA_DRIVER_GMAC_CMN=y
 CONFIG_BCMA_DRIVER_GPIO=y
 CONFIG_MFD_STMPE=y
 CONFIG_STMPE_SPI=y
+CONFIG_MFD_WL1273_CORE=m
 CONFIG_MFD_ARIZONA_I2C=m
 CONFIG_MFD_ARIZONA_SPI=m
 CONFIG_MFD_WM5102=y
@@ -911,7 +913,6 @@ CONFIG_USB_M5602=m
 CONFIG_USB_STV06XX=m
 CONFIG_USB_PWC=m
 CONFIG_USB_S2255=m
-CONFIG_USB_STKWEBCAM=m
 CONFIG_VIDEO_USBTV=m
 CONFIG_USB_VIDEO_CLASS=m
 CONFIG_USB_ZR364XX=m
@@ -974,22 +975,7 @@ CONFIG_VIDEO_EM28XX=m
 CONFIG_VIDEO_EM28XX_V4L2=m
 CONFIG_VIDEO_EM28XX_ALSA=m
 CONFIG_VIDEO_EM28XX_DVB=m
-CONFIG_RADIO_SAA7706H=m
-CONFIG_RADIO_SHARK=m
-CONFIG_RADIO_SHARK2=m
-CONFIG_RADIO_SI4713=m
-CONFIG_RADIO_TEA5764=m
-CONFIG_RADIO_TEF6862=m
-CONFIG_RADIO_WL1273=m
-CONFIG_USB_DSBR=m
-CONFIG_USB_KEENE=m
-CONFIG_USB_MA901=m
-CONFIG_USB_MR800=m
-CONFIG_RADIO_SI470X=m
-CONFIG_USB_SI470X=m
-CONFIG_I2C_SI470X=m
-CONFIG_I2C_SI4713=m
-CONFIG_RADIO_WL128X=m
+# CONFIG_RADIO_ADAPTERS is not set
 CONFIG_V4L_PLATFORM_DRIVERS=y
 CONFIG_V4L_MEM2MEM_DRIVERS=y
 CONFIG_VIDEO_MEM2MEM_DEINTERLACE=m
@@ -1236,11 +1222,6 @@ CONFIG_USB_IOWARRIOR=m
 CONFIG_USB_TEST=m
 CONFIG_USB_ISIGHTFW=m
 CONFIG_USB_YUREX=m
-CONFIG_USB_ATM=m
-CONFIG_USB_SPEEDTOUCH=m
-CONFIG_USB_CXACRU=m
-CONFIG_USB_UEAGLEATM=m
-CONFIG_USB_XUSBATM=m
 CONFIG_NOP_USB_XCEIV=y
 CONFIG_USB_GADGET=y
 CONFIG_USB_CONFIGFS=m
@@ -1304,9 +1285,6 @@ CONFIG_LEDS_TRIGGER_CAMERA=m
 CONFIG_LEDS_TRIGGER_PANIC=y
 CONFIG_LEDS_TRIGGER_NETDEV=m
 CONFIG_LEDS_TRIGGER_PATTERN=m
-CONFIG_ACCESSIBILITY=y
-CONFIG_SPEAKUP=m
-CONFIG_SPEAKUP_SYNTH_SOFT=m
 CONFIG_RTC_CLASS=y
 CONFIG_RTC_DRV_ABX80X=m
 CONFIG_RTC_DRV_DS1307=m
@@ -1354,6 +1332,7 @@ CONFIG_AUXDISPLAY=y
 CONFIG_HD44780=m
 CONFIG_UIO=y
 CONFIG_UIO_PDRV_GENIRQ=y
+CONFIG_UIO_DMEM_GENIRQ=m
 CONFIG_STAGING=y
 CONFIG_PRISM2_USB=m
 CONFIG_R8712U=m
@@ -1392,6 +1371,7 @@ CONFIG_FB_TFT_UPD161704=m
 CONFIG_BCM2835_VCHIQ=y
 CONFIG_SND_BCM2835=m
 CONFIG_VIDEO_BCM2835=m
+CONFIG_BCM2835_VCHIQ_MMAL=y
 CONFIG_COMMON_CLK_AXI_CLKGEN=m
 CONFIG_CLK_RASPBERRYPI=y
 CONFIG_MAILBOX=y
